cmake_minimum_required(VERSION 3.17)
project(DSA)

set(CMAKE_CXX_STANDARD 20)

add_executable(DSA Array.h Sort.h main.cpp SeiveOfEratosthenes.h Matrices.h SparseMatrix.h Polynomial.h LinkedList.h Strobogrammatic.h ChineeseRemainderTheorem.h BinaryPalindrome.h Karatsuba.h Flip1Bit.h BoothsAlgo.h Hourglass.h MaximumProductSubarray.h BlockSwap.h SwapNibble.h Stack.h Queue.h Tree.h MaxEquilibriumSum.h LeaderElements.h MajorityElement.h LexiPalindrome.h NaturalSortOrder.h HyphenToFront.h WeightedSubstring.h LongestPalindromeSubstring.h Heap.h)